fix: hidden scrollbar for scrollable component

--- a/src/components/filter-display/filter-display.scss
+++ b/src/components/filter-display/filter-display.scss
@@ -67,9 +67,11 @@
       display: flex;
       flex-direction: row;
       flex-wrap: nowrap;
-      overflow-x: scroll;
       gap: 8px;
       border-radius: 8px;
+      overflow-x: scroll;
+      -ms-overflow-style: none;
+      scrollbar-width: none;
 
       &::-webkit-scrollbar {
         display: none;
@@ -126,10 +128,12 @@
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    overflow-x: scroll;
     margin: 8px;
     gap: 8px;
     border-radius: 8px;
+    overflow-x: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 
     &::-webkit-scrollbar {
       display: none;
